--- a/css/styles.css
+++ b/css/styles.css
@@ -4,20 +4,59 @@ body {
   background-color: #fff;
 }
 
+/* ==== Reset ==== */
+
 ul,
 ol {
   list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
 }
 
 a {
   text-decoration: none;
 }
 
+/* ==== Common ==== */
+
+.container {
+  max-width: 1158px;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+
+.section {
+  padding: 120px 0;
+}
+
 button {
   font-family: inherit;
 }
-
 /* ===== Header ===== */
+
+.page-header {
+  border-bottom: 1px solid #e7e9fc;
+}
+
+.header-container {
+  display: flex;
+  align-items: center;
+}
+
+.header-nav {
+  display: flex;
+  align-items: center;
+}
 
 .logo {
   font-family: "Raleway", sans-serif;
@@ -28,6 +67,12 @@ button {
   text-transform: uppercase;
   color: #4d5ae5;
 }
+
+.header-logo {
+  padding: 24px 0;
+  margin-right: 76px;
+}
+
 .header-logo .logo-part {
   color: #2e2f42;
 }
@@ -36,7 +81,15 @@ button {
   color: #f4f4fd;
 }
 
+.nav-list {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+}
+
 .nav-link {
+  display: block;
+  padding: 24px 0;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -51,8 +104,18 @@ button {
 
 .contacts {
   font-style: normal;
+  margin-left: auto;
 }
+
+.contacts-list {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+}
+
 .contacts-link {
+  display: block;
+  padding: 24px 0;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -67,9 +130,13 @@ button {
 /* ===== Hero ===== */
 .hero {
   background-color: #2e2f42;
+  text-align: center;
+  padding: 188px 0;
 }
 
 .hero-title {
+  max-width: 496px;
+  margin: 0 auto 48px;
   font-weight: 700;
   font-size: 56px;
   line-height: 1.07;
@@ -79,6 +146,11 @@ button {
 }
 
 .hero-btn {
+  min-width: 169px;
+  height: 56px;
+  padding: 16px 32px;
+  border: none;
+  border-radius: 4px;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -93,7 +165,31 @@ button {
 }
 
 /* ===== Features ===== */
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.features-list {
+  display: flex;
+  gap: 24px;
+}
+
+.feature-item {
+  width: calc((100% - 72px) / 4);
+}
+
 .feature-title {
+  margin-bottom: 8px;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -109,11 +205,13 @@ button {
 }
 
 /* ===== Team ===== */
+
 .team {
   background-color: #f4f4fd;
 }
 
 .section-title {
+  margin-bottom: 72px;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
@@ -123,11 +221,23 @@ button {
   color: #2e2f42;
 }
 
+.team-list {
+  display: flex;
+  gap: 24px;
+}
+
 .team-card {
+  flex-basis: calc((100% - 72px) / 4);
+  border-radius: 0 0 4px 4px;
   background-color: #fff;
 }
 
+.team-content-part {
+  padding: 32px 16px;
+}
+
 .team-name {
+  margin: 0 0 8px;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -136,6 +246,7 @@ button {
   color: #2e2f42;
 }
 .team-role {
+  margin-bottom: 0px;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
@@ -145,7 +256,32 @@ button {
 }
 
 /* ===== Portfolio ===== */
+
+.portfolio .section-title {
+  margin-bottom: 72px;
+}
+
+.portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 24px;
+  row-gap: 48px;
+}
+
+.portfolio-content-part {
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
+  border-radius: 0 0 4px 4px;
+}
+
+.portfolio-card {
+  flex-basis: calc((100% - 48px) / 3);
+  background-color: #fff;
+}
+
 .portfolio-title {
+  margin-bottom: 8px;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -163,9 +299,24 @@ button {
 /* ===== Footer ===== */
 .page-footer {
   background-color: #2e2f42;
+  padding: 100px 0;
+  border-top: 0;
+}
+
+.footer-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  text-align: left;
+}
+
+.footer-logo {
+  display: inline-block;
+  margin-bottom: 16px;
 }
 
 .footer-text {
+  max-width: 264px;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
