--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,10 @@ a {
 
 /* ==== Common ==== */
 
+img {
+  display: block;
+}
+
 .container {
   max-width: 1158px;
   padding: 0 15px;
@@ -146,6 +150,8 @@ button {
 }
 
 .hero-btn {
+  display: block;
+  margin: 0 auto;
   min-width: 169px;
   height: 56px;
   padding: 16px 32px;
@@ -233,7 +239,7 @@ button {
 }
 
 .team-content-part {
-  padding: 32px 16px;
+  padding: 32px 0;
 }
 
 .team-name {
