--- a/css/styles.css
+++ b/css/styles.css
@@ -313,15 +313,12 @@ button {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  gap: 16px;
   text-align: left;
 }
 
 .footer-logo {
   display: inline-block;
-}
-
-.footer-logo {
-  margin-bottom: 16px;
 }
 
 .footer-text {
