--- a/css/styles.css
+++ b/css/styles.css
@@ -72,6 +72,16 @@ button {
   color: #4d5ae5;
 }
 
+a.footer-logo {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #4d5ae5;
+}
+
 .header-logo {
   padding: 24px 0;
   margin-right: 76px;
