--- a/css/styles.css
+++ b/css/styles.css
@@ -91,7 +91,7 @@ a.footer-logo {
   color: #4d5ae5;
 }
 
-.page-footer .footer-logo {
+footer .footer-logo {
   display: inline-block;
   margin-bottom: 16px;
 }
