--- a/css/styles.css
+++ b/css/styles.css
@@ -82,6 +82,11 @@ button {
 }
 
 a.footer-logo {
+  display: inline-block;
+  margin-bottom: 16px;
+}
+
+a.footer-logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 18px;
@@ -89,11 +94,6 @@ a.footer-logo {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
-}
-
-footer .footer-logo {
-  display: inline-block;
-  margin-bottom: 16px;
 }
 
 .footer-logo .logo-part {
