--- a/css/styles.css
+++ b/css/styles.css
@@ -81,7 +81,7 @@ button {
   color: #2e2f42;
 }
 
-a.footer-logo {
+.footer-logo {
   display: inline-block;
   margin-bottom: 16px;
   font-family: "Raleway", sans-serif;
